After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 345836 - Legend position not saved correctly
Legend position not saved correctly
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
git master
Other All
: Normal normal
: ---
Assigned To: Emmanuel Pacaud
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2006-06-24 20:00 UTC by Berthold Höllmann
Modified: 2007-02-18 20:07 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Berthold Höllmann 2006-06-24 20:00:31 UTC
Please describe the problem:
If I generate a x-y chart, add a legend, set legend position to "top" save and close the spreadsheat, when reopening the spreadsheet, the legend position is "right" again.

Steps to reproduce:
1. Create a x-y chart
2. add a legend
3. set legend position to "top"
4. accept the chart
5. save and close the spreadsheet
6. reopen the just saved spreadsheet


Actual results:
The legend position is "right" again

Expected results:
The legend position should be "top" again

Does this happen every time?
yes

Other information:
Comment 1 Emmanuel Pacaud 2006-07-03 19:10:20 UTC
The problem is we don't save anything when a property value is the default one, defined in the base class (GogObject).

But in the case of position property, default value depend on object type: top for Graph title, left for Legend.

So, here, lack of compass property in gnumeric file is interpreted as top instead of left.

A quick fix would be to always save the value of compass property. But that means saving of useless information for some objects.

Jody, any thought ?
Comment 2 Jean-François Fortin Tam 2006-11-26 17:04:35 UTC
The bug is still here for me in 1.7.0 (provided by ubuntu 6.10), is this corrected in newer releases?
Comment 3 Emmanuel Pacaud 2006-11-26 18:06:18 UTC
This bug is not fixed yet.
Comment 4 Morten Welinder 2006-11-28 01:59:25 UTC
That sounds more like compass should not have a default, then.
Comment 5 Emmanuel Pacaud 2007-02-18 20:07:44 UTC
Fixed in the development version. The fix will be available in the next major release. Thank you for your bug report.